# ttb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README.md  deps.awk  fpm.toml  functions.md  hypela2_nh_ttb.f  kontraktion.md  sample.md
.github/workflows/: ci.yml  pages.yml
app/: main.f  main.f90
aux/: fpm.F90
docs/: _config.yml  archive_functions.md  example.md  example_hypela2.md  example_neohooke-LSDYNA.md  example_neohooke.md  example_stvenantkirchhoff.md  functions.md  gdpr-eu.md  index.md  installation.md  quickstartguide.md  tensordatatypes.md
docs/_includes/: head_custom.html  katex.html  mathjax.html
docs/_layouts/: katex.html  mathjax.html
docs/_old/: example.md  index.md
docs/_old/examples/: script_umat.f
docs/_old/functions/: identity.md  inverse.md
docs/_posts/: 2017-12-28-update.md
docs/_test/: _config.yml
docs/_test/_data/: topnav.yml
docs/_test/_data/sidebars/: ttb_sidebar.yml
docs/_test/pages/ttb/: ttb_landing_page.html  ttb_sample1.md
docs/api/: assignments.md  index.md  operators.md  tensordatatypes.md
docs/api/functions/: asabqarray.md  asarray.md  astensor.md  asvoigt.md  determinant.md  deviator.md  identity.md  index.md  inverse.md  norm.md  permute.md  piola.md  power.md  rotation.md  squareroot.md  trace.md  transpose.md  unimodular.md  voigtstrain.md
docs/api/operators/: operators_overview.md
docs/assets/js/: mathjax-config.js  mathjax-script-type.js  mathtex-script-type.js
docs/assignments/: ass_overview.md
docs/examples/: LSDYNA_nh_umat.F  LSDYNA_nh_utan.F  ex01_stvenantkirchhoff.md  ex02_neohooke.md  example.md  example_neohooke.md  example_stvenantkirchhoff.md  hypela2_nh_ttb.F  hypela2_nh_ttb_simple.F  hypela2_nh_ttb_simple.f  hypela2_nonlinear_viscoelasticity.F  hypela2_nonlinear_viscoelasticity.f  hypela2_stvenantkirchhoff.F  index.md  script_umat.f  umat_neoHok_ttb.f  umat_nh_ttb.f  umat_nh_ttb_simple.F  umat_nh_ttb_simple.f
docs/examples/Abaqus/: umat_nh_ttb.f  umat_nh_ttb_simple.f
docs/examples/Marc/: hypela2_nh_ttb.f  hypela2_nh_ttb_simple.f  hypela2_nonlinear_viscoelasticity.f  hypela2_stvenantkirchhoff.f
docs/functions/: asabqarray.md  asarray.md  astensor.md  asvoigt.md  determinant.md  deviator.md  exponential.md  inverse.md  norm.md  permute.md  piola.md  power.md  rotation.md  squareroot.md  trace.md  transpose.md  unimodular.md  voigtstrain.md
docs/installation/: index.md  quickstartguide.md
docs/operators/: operators_overview.md
docs/pages/ttb/: ttb_landing_page.html
src/: CMakeLists.txt  Makefile  libadd.f  libadd.f90  libadd.finc  libasabqarray.f  libasabqarray.f90  libasabqarray.finc  libasarray.f  libasarray.f90  libasarray.finc  libassign.f  libassign.f90  libassignarray.f  libassignarray.f90  libassignarray.finc  libassignscalar.f  libassignscalar.f90  libassignscalar.finc  libassignten2sym.f  libassignten2sym.f90  libassignten2sym.finc  libcrossdyadic.f  libcrossdyadic.f90  libcrossdyadic.finc  libddot.f  libddot.f90  libddot.finc  libdet.f  libdet.f90  libdet.finc  libdev.f  libdev.f90  libdev.finc  libdiv.f  libdiv.f90  libdiv.finc  libdot.f  libdot.f90  libdot.finc  (+83 more)
test/: CMakeLists.txt  main_tests.f90  test_suite1.f90
ttb/: libadd.f  libasabqarray.f  libasarray.f  libassignarray.f  libassignscalar.f  libassignten2sym.f  libcrossdyadic.f  libddot.f  libderivativeexp.f  libdet.f  libdev.f  libdiv.f  libdot.f  libdyadic.f  libexp.f  libidentity.f  libinnercrossdyadic.f  libinv.f  libln.f  libnorm.f  libpermute.f  libpiola.f  libpower.f  libreducedim.f  librotation.f  libsqrt.f  libstrainstore.f  libsub.f  libsymstore.f  libtenstore.f  libtools.f  libtrace.f  libtransp.f  libunimodular.f  ttb_library.F  ttb_library.f  ttb_librarybkp.f
ttbXLSDYNA/: libX_to_ten.f  libdefoGrad.f  libten_to_X.f  libten_to_list.f  ttbXLSDYNA_library.F
